update LeetCode Biweekly Contest 131

--- a/algorithm/LeetCode/[Hard] 1255. Maximum Score Words Formed by Letters.md
+++ b/algorithm/LeetCode/[Hard] 1255. Maximum Score Words Formed by Letters.md
@@ -59,7 +59,7 @@ So we can use DFS here to search all valid combinations and find out the highest
 Each time, we search from index `i` and all the rest node `words[i:]` are potential candidates to DFS.
 Suppose in one of DFS branch, we pass `words[i:j]` and check the node `words[j]`. If `words[j]`'s letter consumption doesn't exceed the current letters restriction, we are good to add its score and keep DFS from `j+1`.
 We can check this by `if all(n <= letters.get(c,0)` for `c`,`n` in `Counter(words[j]).items())`
-And when we DFS from `words[j]`, we also need to reduce letters resource by `words[j]`'s letter consumption. Or we can pass a new counter argument to DFS as `new_letter = {c:n-Counter(words[j]).get(c,0)`` for `c`,`n` in `letter.items()`}
+And when we DFS from `words[j]`, we also need to reduce letters resource by `words[j]`'s letter consumption. Or we can pass a new counter argument to DFS as `new_letter = {c:n-Counter(words[j]).get(c,0)` for `c`,`n` in `letter.items()`}
 
 To improve performance, we can precomputer each word's letter counter and its score:
 
@@ -91,4 +91,103 @@ class Solution:
         
         dfs(0, 0, collections.Counter(letters))
         return self.max_score
+```
+
+**Solution 2: (bitmask)**
+```
+Runtime: 10 ms
+Memory: 11.54 MB
+```
+```c++
+class Solution {
+public:
+    int maxScoreWords(vector<string>& words, vector<char>& letters, vector<int>& score) {
+        int n = words.size(), s, ans = 0;
+        int cnt[26] = {0}, cur[26];
+        bool flag;
+        for (auto c: letters) {
+            cnt[c-'a'] += 1;
+        }
+        for (auto m = 1; m < (1<<n); m ++) {
+            memset(cur, 0, sizeof(cur));
+            for (int i = 0; (1<<i) <= m; i ++) {
+                if (m & (1<<i)) {
+                    for (auto c: words[i]) {
+                        cur[c-'a'] += 1;
+                    }
+                }
+            }
+            flag = true;
+            for (int i = 0; i < 26; i ++) {
+                if (cur[i] > cnt[i]) {
+                    flag = false;\
+                    break;
+                }
+            }
+            if (flag) {
+                s = 0;
+                for (int i = 0; i < 26; i ++) {
+                    s += score[i]*cur[i];
+                }
+                ans = max(ans, s);
+            }
+        }
+        return ans;
+    }
+};
+```
+**Solution 3: (Backtracking)**
+```
+Runtime: 7 ms
+Memory: 11.90 MB
+```
+```c++
+class Solution {
+    void bt(int i, int &cur, int &ans, vector<int> &cnt, vector<vector<int>> &w_cnt, vector<int> &score) {
+        cout << i << ", " << cur << endl;
+        if (i == w_cnt.size()) {
+            ans = max(ans, cur);
+            return;
+        }
+        bool flag = true;
+        for (int j = 0; j < 26; j ++) {
+            if (w_cnt[i][j] > cnt[j]) {
+                flag = false;
+                break;
+            }
+        }
+        if (flag) {
+            for (int j = 0; j < 26; j ++) {
+                if (w_cnt[i][j]) {
+                    cnt[j] -= w_cnt[i][j];
+                    cur += score[j] * w_cnt[i][j];
+                }
+            }
+            bt(i+1, cur, ans, cnt, w_cnt, score);
+            for (int j = 0; j < 26; j ++) {
+                if (w_cnt[i][j]) {
+                    cnt[j] += w_cnt[i][j];
+                    cur -= score[j] * w_cnt[i][j];
+                }
+            }
+        }
+        bt(i+1, cur, ans, cnt, w_cnt, score);
+    }
+public:
+    int maxScoreWords(vector<string>& words, vector<char>& letters, vector<int>& score) {
+        vector<int> cnt(26);
+        for (auto c: letters) {
+            cnt[c - 'a'] += 1;
+        }
+        vector<vector<int>> w_cnt(words.size(), vector<int>(26));
+        for (int i = 0; i < words.size(); i ++) {
+            for (auto c: words[i]) {
+                w_cnt[i][c - 'a'] += 1;
+            }
+        }
+        int cur = 0, ans = 0;
+        bt(0, cur, ans, cnt, w_cnt, score);
+        return ans;
+    }
+};
 ```
