--- a/algorithm/LeetCode/[Hard] 3068. Find the Maximum Sum of Node Values.md
+++ b/algorithm/LeetCode/[Hard] 3068. Find the Maximum Sum of Node Values.md
@@ -58,6 +58,17 @@ Explanation: The maximum achievable sum is 42 which can be achieved by Bogdan pe
 # Submissions
 ---
 **Solution 1: (Top-Down Dynamic Programming - Memoization, take and not-taken)**
+
+      a  - x  -  y   - z  -  b
+    a^k   x^k
+         x^k^k  y^k
+               y^k^k  z^k
+                     z^k^k  b^k
+  -> a^k - x -  y   - z   -  b^k
+  -> change pair value to make max
+  ->        ---
+  ->        2*n (even)
+
 ```
 Runtime: 241 ms
 Memory: 145.36 MB
