--- a/algorithm/LeetCode/[Easy] 1863. Sum of All Subset XOR Totals.md
+++ b/algorithm/LeetCode/[Easy] 1863. Sum of All Subset XOR Totals.md
@@ -68,3 +68,128 @@ class Solution:
             cur += [nums[i]]
         return sum(cur)
 ```
+
+**Solution 2: (Generate All Subsets Using Backtracking)**
+```
+Runtime: 82 ms
+Memory: 46.79 MB
+```
+```c++
+class Solution {
+    void generateSubsets(const vector<int>& nums, int index, vector<int> subset,
+                         vector<vector<int>>& subsets) {
+        // Base case: index reached end of nums
+        // Add the current subset to subsets
+        if (index == nums.size()) {
+            subsets.push_back(subset);
+            return;
+        }
+
+        // Generate subsets with nums[i]
+        subset.push_back(nums[index]);
+        generateSubsets(nums, index + 1, subset, subsets);
+        subset.pop_back();
+
+        // Generate subsets without nums[i]
+        generateSubsets(nums, index + 1, subset, subsets);
+    }
+public:
+    int subsetXORSum(vector<int>& nums) {
+        vector<vector<int>> subsets;
+        // Generate all of the subsets
+        generateSubsets(nums, 0, {}, subsets);
+
+        // Compute the XOR total for each subset and add to the result
+        int result = 0;
+        for (auto& subset : subsets) {
+            int subsetXORTotal = 0;
+            for (int num : subset) {
+                subsetXORTotal ^= num;
+            }
+            result += subsetXORTotal;
+        }
+        return result;
+    }
+};
+```
+
+**Solution 3: (Optimized Backtracking)**
+```
+Runtime: 0 ms
+Memory: 8.27 MB
+```
+```c++
+class Solution {
+    int XORSum(vector<int>& nums, int index, int currentXOR) {
+        // Return currentXOR when all elements in nums are already considered
+        if (index == nums.size()) return currentXOR;
+
+        // Calculate sum of subset xor with current element
+        int withElement = XORSum(nums, index + 1, currentXOR ^ nums[index]);
+
+        // Calculate sum of subset xor without current element
+        int withoutElement = XORSum(nums, index + 1, currentXOR);
+
+        // Return sum of xor totals
+        return withElement + withoutElement;
+    }
+public:
+    int subsetXORSum(vector<int>& nums) {
+        return XORSum(nums, 0, 0); 
+    }
+};
+```
+
+**Solution 3: (bitmask)**
+```
+Runtime: 3 ms
+Memory: 8.34 MB
+```
+```c++
+class Solution {
+public:
+    int subsetXORSum(vector<int>& nums) {
+        int n = nums.size(), i, cur, ans = 0;
+        for (int a = 1; a < (1<<n); a ++) {
+            i = 0;
+            cur = 0;
+            while ((1<<i) <= a) {
+                if (a&(1<<i)) {
+                    cur ^= nums[i];
+                }
+                i += 1;
+            }
+            ans += cur;
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 4: (Bit Manipulation, observation)**
+
+Input: nums = [1,3] (N = 2) Output = 6 = 110
+Input: nums = [5,1,6] (N = 3) Output = 28 = 11100
+Input: nums = [3,4,5,6,7,8] (N = 6) Output = 480 = 111100000
+Input: nums = [1] (N = 1) Output = 1 = 1
+Input: nums = [5, 20] (n = 2) Output = 42 = 101010
+
+```
+Runtime: 0 ms
+Memory: 8.28 MB
+```
+```c++
+class Solution {
+public:
+    int subsetXORSum(vector<int>& nums) {
+        int result = 0;
+        // Capture each bit that is set in any of the elements
+        for (int num : nums) {
+            result |= num;
+        }
+        // Multiply by the number of subset XOR totals that will have each bit set
+        return result << (nums.size() - 1); 
+    }
+};
+
+```
