--- a/algorithm/LeetCode/[Easy] 1608. Special Array With X Elements Greater Than or Equal X.md
+++ b/algorithm/LeetCode/[Easy] 1608. Special Array With X Elements Greater Than or Equal X.md
@@ -64,3 +64,74 @@ class Solution:
             i += 1
         return -1 if i < len(nums) and i == nums[i] else i
 ```
+
+**Solution 2: (Sorting)**
+```
+Runtime: 5 ms
+Memory: 10.06 MB
+```
+```c++
+class Solution {
+    int getFirstGreaterOrEqual(vector<int>& nums, int val) {
+        int start = 0;
+        int end = nums.size() - 1;
+
+        int index = nums.size();
+        while (start <= end) {
+            int mid = (start + end) / 2;
+
+            if (nums[mid] >= val) {
+                index = mid;
+                end = mid - 1;
+            } else {
+                start = mid + 1;
+            }
+        }
+
+        return index;
+    }
+public:
+    int specialArray(vector<int>& nums) {
+        sort(nums.begin(), nums.end());
+        
+        int N = nums.size();
+        for (int i = 1; i <= N; i++) {
+            int k = getFirstGreaterOrEqual(nums, i);
+            
+            if (N - k == i) {
+                return i;
+            }
+        }
+        return -1;
+    }
+};
+```
+
+**Solution 3: (Counting Sort + Prefix Sum)**
+```
+Runtime: 0 ms
+Memory: 10.36 MB
+```
+```c++
+class Solution {
+public:
+    int specialArray(vector<int>& nums) {
+        int N = nums.size();
+        
+        vector<int> freq(N + 1, 0);
+        for (int i = 0; i < N; i++) {
+            freq[min(N, nums[i])]++;
+        }
+        
+        int numGreaterThanOrEqual = 0;
+        for (int i = N; i >= 1; i--) {
+            numGreaterThanOrEqual += freq[i];
+            if (i == numGreaterThanOrEqual) {
+                return i;
+            }
+        }
+        
+        return -1;
+    }
+};
+```
