update LeetCode Biweekly Contest 132

--- a/algorithm/LeetCode/[Easy] 1002. Find Common Characters.md
+++ b/algorithm/LeetCode/[Easy] 1002. Find Common Characters.md
@@ -89,4 +89,40 @@ char ** commonChars(char ** words, int wordsSize, int* returnSize){
     free(table);
     return result;
 }
-`` `
+```
+
+**Solution 3: (Counter)**
+```
+Runtime: 4 ms
+Memory: 11.41 MB
+```
+```c++
+class Solution {
+public:
+    vector<string> commonChars(vector<string>& words) {
+        int pre[26], cur[26];
+        pre[0] = -1;
+        for (auto w: words) {
+            memset(cur, 0, sizeof(cur));
+            for (auto c: w) {
+                cur[c-'a'] += 1;
+            }
+            if (pre[0] == -1) {
+                memcpy(pre, cur, sizeof(pre));
+            } else {
+                for (int i = 0; i < 26; i ++) {
+                    pre[i] = min(pre[i], cur[i]);
+                }
+            }
+        }
+        vector<string> ans;
+        for (int i = 0; i < 26; i ++) {
+            while (pre[i]) {
+                ans.push_back(string(1, i+'a'));
+                pre[i] -= 1;
+            }
+        }
+        return ans;
+    }
+};
+```
