--- a/algorithm/LeetCode/[Easy] 1619. Mean of Array After Removing Some Elements.md
+++ b/algorithm/LeetCode/[Easy] 1619. Mean of Array After Removing Some Elements.md
@@ -56,3 +56,23 @@ class Solution:
         n = len(arr)
         return sum(sorted(arr)[n // 20 : -n // 20]) / (n * 9 // 10)
 ```
+
+**Solution 2: (Math)**
+```
+Runtime: 9 ms
+Memory: 12.20 MB
+```
+```c++
+class Solution {
+public:
+    double trimMean(vector<int>& arr) {
+        sort(arr.begin(),arr.end());
+        int n = arr.size();
+        int p = (5 * n) / 100;
+        double ans = 0;
+        for(int i=p;i<n-p;i++) ans += arr[i];
+        ans /= (n - (p*2));
+        return ans;
+    }
+};
+```
