update LeetCode Weekly Contest 401

--- a/algorithm/LeetCode/[Hard] 3177. Find the Maximum Length of a Good Subsequence II.md
+++ b/algorithm/LeetCode/[Hard] 3177. Find the Maximum Length of a Good Subsequence II.md
@@ -46,7 +46,7 @@ Memory: 126.90 MB
 class Solution {
 public:
     int maximumLength(vector<int>& nums, int k) {
-        int n = nums.size(), ans = 1;
+        int n = nums.size();
         vector<unordered_map<int,int>> dp(k+1);
         vector<int> res(k + 1);
         for (auto num: nums) {
