update LeetCode Weekly Contest 402

--- a/algorithm/LeetCode/[Easy] 1051. Height Checker.md
+++ b/algorithm/LeetCode/[Easy] 1051. Height Checker.md
@@ -32,3 +32,246 @@ class Solution:
         sorted_heights = sorted(heights)
         return len([1 for i in range(len(heights)) if sorted_heights[i] != heights[i]])
 ```
+
+**Solution 2: (Bubble Sort)**
+```
+Runtime: 0 ms
+Memory: 9.93 MB
+```
+```c++
+class Solution {
+    // Function to perform bubble sort on the input array.
+    void bubbleSort(vector<int>& arr) {
+        int n = arr.size();
+        // Loop through the array for bubble sort passes.
+        for (int i = 0; i < n - 1; ++i) {
+            // Inner loop to compare and swap elements.
+            for (int j = 0; j < n - i - 1; ++j) {
+                // Compare and swap if elements are in the wrong order.
+                if (arr[j] > arr[j + 1]) {
+                    swap(arr[j], arr[j + 1]);
+                }
+            }
+        }
+    }
+public:
+    int heightChecker(vector<int>& heights) {
+        // Sort the array using bubble sort.
+        vector<int> sortedHeights = heights;
+        bubbleSort(sortedHeights);
+
+        int count = 0;
+        // Loop through the original and sorted arrays.
+        for (int i = 0; i < sortedHeights.size(); ++i) {
+            // Increment count if elements at the same index differ.
+            if (heights[i] != sortedHeights[i]) {
+                count += 1;
+            }
+        }
+        // Return the total count of differing elements.
+        return count;
+    }
+};
+```
+
+**Solution 3: (Merge Sort)**
+```
+Runtime: 2 ms
+Memory: 10.19 MB
+```
+```c++
+class Solution {
+    // Function to merge two sub-arrays in sorted order.
+    void merge(vector<int>& arr, int left, int mid, int right,
+               vector<int>& tempArr) {
+        // Calculate the start and sizes of two halves.
+        int start1 = left;
+        int start2 = mid + 1;
+        int n1 = mid - left + 1;
+        int n2 = right - mid;
+
+        // Copy elements of both halves into a temporary array.
+        for (int i = 0; i < n1; i++) {
+            tempArr[start1 + i] = arr[start1 + i];
+        }
+        for (int i = 0; i < n2; i++) {
+            tempArr[start2 + i] = arr[start2 + i];
+        }
+
+        // Merge the sub-arrays in 'tempArray' back into the original array
+        // 'arr' in sorted order.
+        int i = 0, j = 0, k = left;
+        while (i < n1 && j < n2) {
+            if (tempArr[start1 + i] <= tempArr[start2 + j]) {
+                arr[k] = tempArr[start1 + i];
+                i += 1;
+            } else {
+                arr[k] = tempArr[start2 + j];
+                j += 1;
+            }
+            k += 1;
+        }
+
+        // Copy remaining elements
+        while (i < n1) {
+            arr[k] = tempArr[start1 + i];
+            i += 1;
+            k += 1;
+        }
+        while (j < n2) {
+            arr[k] = tempArr[start2 + j];
+            j += 1;
+            k += 1;
+        }
+    }
+
+    // Recursive function to sort an array using merge sort.
+    void mergeSort(vector<int>& arr, int left, int right,
+                   vector<int>& tempArr) {
+        if (left >= right) {
+            return;
+        }
+        int mid = (left + right) / 2;
+        // Sort first and second halves recursively.
+        mergeSort(arr, left, mid, tempArr);
+        mergeSort(arr, mid + 1, right, tempArr);
+        // Merge the sorted halves.
+        merge(arr, left, mid, right, tempArr);
+    }
+public:
+    int heightChecker(vector<int>& heights) {
+        // Sort the array using merge sort.
+        vector<int> sortedHeights = heights;
+        vector<int> tempArray(heights.size());
+        mergeSort(sortedHeights, 0, sortedHeights.size() - 1, tempArray);
+
+        int count = 0;
+        // Loop through the original and sorted arrays.
+        for (int i = 0; i < sortedHeights.size(); ++i) {
+            // Increment count if elements at the same index differ.
+            if (heights[i] != sortedHeights[i]) {
+                count += 1;
+            }
+        }
+        // Return the total count of differing elements.
+        return count;
+    }
+};
+```
+
+**Solution 5: (Counting Sort)**
+```
+Runtime: 6 ms
+Memory: 11.71 MB
+```
+```c++
+class Solution {
+    void countingSort(vector<int>& arr) {
+        // Create the counting hash map.
+        unordered_map<int, int> counts;
+        // Find the minimum and maximum values in the array.
+        int minVal = *min_element(arr.begin(), arr.end());
+        int maxVal = *max_element(arr.begin(), arr.end());
+
+        // Update element's count in the hash map.
+        for (auto& val : arr) {
+            counts[val]++;
+        }
+
+        int index = 0;
+        // Place each element in its correct position in the array.
+        for (int val = minVal; val <= maxVal; ++val) {
+            // Append all 'val's together if they exist.
+            while (counts[val] > 0) {
+                arr[index] = val;
+                index += 1;
+                counts[val] -= 1;
+            }
+        }
+    }
+public:
+    int heightChecker(vector<int>& heights) {
+        // Sort the array using counting sort.
+        vector<int> sortedHeights = heights;
+        countingSort(sortedHeights);
+
+        int count = 0;
+        // Loop through the original and sorted arrays.
+        for (int i = 0; i < sortedHeights.size(); ++i) {
+            // Increment count if elements at the same index differ.
+            if (heights[i] != sortedHeights[i]) {
+                count += 1;
+            }
+        }
+        // Return the total count of differing elements.
+        return count;
+    }
+};
+```
+
+**Solution 6: (Radix Sort)**
+```
+Runtime: 3 ms
+Memory: 10.44 MB
+```
+```c++
+class Solution {
+    // Bucket sort function for each place value digit.
+    void bucketSort(vector<int>& arr, int placeValue) {
+        vector<vector<int>> buckets(10, vector<int>());
+        // Store the respective number based on its digit.
+        for (int& val : arr) {
+            int digit = abs(val) / placeValue;
+            digit = digit % 10;
+            buckets[digit].push_back(val);
+        }
+
+        // Overwrite 'arr' in sorted order of current place digits.
+        int index = 0;
+        for (int digit = 0; digit < 10; ++digit) {
+            for (int& val : buckets[digit]) {
+                arr[index] = val;
+                index++;
+            }
+        }
+    }
+
+    // Radix sort function.
+    void radixSort(vector<int>& arr) {
+        // Find the absolute maximum element to find max number of digits.
+        int maxElement = arr[0];
+        for (int& val : arr) {
+            maxElement = max(abs(val), maxElement);
+        }
+        int maxDigits = 0;
+        while (maxElement > 0) {
+            maxDigits += 1;
+            maxElement /= 10;
+        }
+
+        // Radix sort, least significant digit place to most significant.
+        int placeValue = 1;
+        for (int digit = 0; digit < maxDigits; ++digit) {
+            bucketSort(arr, placeValue);
+            placeValue *= 10;
+        }
+    }
+public:
+    int heightChecker(vector<int>& heights) {
+        // Sort the array using radix sort.
+        vector<int> sortedHeights = heights;
+        radixSort(sortedHeights);
+
+        int count = 0;
+        // Loop through the original and sorted arrays.
+        for (int i = 0; i < sortedHeights.size(); ++i) {
+            // Increment count if elements at the same index differ.
+            if (heights[i] != sortedHeights[i]) {
+                count += 1;
+            }
+        }
+        // Return the total count of differing elements.
+        return count;
+    }
+};
+```
