--- a/algorithm/LeetCode/[Hard] 1092. Shortest Common Supersequence.md
+++ b/algorithm/LeetCode/[Hard] 1092. Shortest Common Supersequence.md
@@ -72,3 +72,65 @@ class Solution:
        # Once done with the loop just reverse to keep the order same as we started from the last
         return res[::-1]
 ```
+
+**Solution 2: (Similar to LCS)**
+```
+Runtime: 18 ms
+Memory: 11.97 MB 
+```
+```c++
+class Solution {
+    //use it as a black-box function which returns LCS of 2 strings
+    string getLCS(string str1, string str2) {
+        int m = str1.size(), n = str2.size();
+        int dp[m + 1][n + 1];
+
+        for(int i = 0; i <= m; i++) {
+            for(int j = 0; j <= n; j++) {
+                if(i == 0 || j == 0)
+                    dp[i][j] = 0;
+                else if(str1[i - 1] == str2[j - 1])
+                    dp[i][j] = dp[i - 1][j - 1] + 1;
+                else
+                    dp[i][j] = max(dp[i - 1][j], dp[i][j - 1]);
+            }
+        }
+        string ans;
+        int i = m, j = n;
+        while(i > 0 && j > 0) {        
+            if(str1[i - 1] == str2[j - 1]) {
+                ans.push_back(str1[i-1]);
+                i--; j--;
+            }        
+            else if(dp[i - 1][j] > dp[i][j - 1]) {
+                i--;
+            }
+            else {
+                j--;
+            }
+        }
+     reverse(ans.begin(), ans.end());
+     return ans;
+    }
+public:
+    string shortestCommonSupersequence(string str1, string str2) {
+        int i = 0, j = 0;
+        string lcs = getLCS(str1, str2), ans = "";
+        //iterate on lcs string
+        for(int k=0; k<lcs.length(); i++,j++,k++) {
+        //include characters from str1 untils it matches with lcs[k]
+            while(str1[i] != lcs[k]) { 
+                ans += str1[i++];
+            }
+        //include characters from str2 untils it matches with lcs[k]
+            while(str2[j] != lcs[k]) {
+                ans += str2[j++];
+            }
+         ans += lcs[k]; //include the common character i.e. lcs[k]
+        }
+     ans += str1.substr(i); //include remaining characters of str1
+     ans += str2.substr(j); //include remaining characters of str2
+     return ans;
+    }
+};
+```
