--- a/algorithm/LeetCode/[Easy] 1122. Relative Sort Array.md
+++ b/algorithm/LeetCode/[Easy] 1122. Relative Sort Array.md
@@ -33,3 +33,64 @@ class Solution:
         N = len(d)
         return sorted(arr1, key=lambda x: d[x] if x in d else x+N)
 ```
+
+**Solution 2: (Sort)**
+```
+Runtime: 5 ms
+Memory: 9.71 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> relativeSortArray(vector<int>& arr1, vector<int>& arr2) {
+        int dp[1001];
+        memset(dp, -1, sizeof(dp));
+        for (int i = 0; i < arr2.size(); i ++) {
+            dp[arr2[i]] = i;
+        }
+        sort(arr1.begin(), arr1.end(), [&](int a, int b){
+            int ia = dp[a] != -1 ? dp[a] : 1000 + a;
+            int ib = dp[b] != -1 ? dp[b] : 1000 + b;
+            return ia < ib;
+        });
+        return arr1;
+    }
+};
+```
+
+**Solution 3: (Using Counting Sort)**
+```
+Runtime: 5 ms
+Memory: 9.33 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> relativeSortArray(vector<int>& arr1, vector<int>& arr2) {
+        int maxElement = *max_element(arr1.begin(), arr1.end());
+        vector<int> count(maxElement + 1);
+
+        // Count occurrences of each element
+        for (int element : arr1) {
+            count[element]++;
+        }
+
+        vector<int> result;
+        // Add elements as per relative order
+        for (int element : arr2) {
+            while (count[element] > 0) {
+                result.push_back(element);
+                count[element]--;
+            }
+        }
+        // Add remaining elements in ascending order
+        for (int num = 0; num <= maxElement; num++) {
+            while (count[num] > 0) {
+                result.push_back(num);
+                count[num]--;
+            }
+        }
+        return result;
+    }
+};
+```
