update LeetCode Biweekly Contest 134

--- a/algorithm/LeetCode/[Easy] 1550. Three Consecutive Odds.md
+++ b/algorithm/LeetCode/[Easy] 1550. Three Consecutive Odds.md
@@ -24,7 +24,7 @@ Explanation: [5,7,23] are three consecutive odds.
 
 # Submissions
 ---
-**Solution 1: (Array)**
+**Solution 1: (Array, counting)**
 ```
 Runtime: 108 ms
 Memory Usage: 13.8 MB
@@ -41,4 +41,27 @@ class Solution:
             else:
                 cum = 0
         return False
+```
+
+**Solution 2: (Brute Force)**
+```
+Runtime: 0 ms
+Memory: 10.66 MB
+```
+```c++
+class Solution {
+public:
+    bool threeConsecutiveOdds(vector<int>& arr) {
+        int n = arr.size();
+        if (n < 3) {
+            return false;
+        }
+        for (int i = 1; i < n-1; i ++) {
+            if (arr[i-1]%2 && arr[i]%2 && arr[i+1]%2) {
+                return true;
+            }
+        }
+        return false;
+    }
+};
 ```
