--- a/algorithm/LeetCode/[Easy] 2582. Pass the Pillow.md
+++ b/algorithm/LeetCode/[Easy] 2582. Pass the Pillow.md
@@ -46,3 +46,37 @@ public:
     }
 };
 ```
+
+**Solution 2: (Math)**
+
+    1 2 3 4
+  -----------
+      1 2
+      5 4 3
+    6 7 8
+
+```
+Runtime: 2 ms
+Memory: 7.09 MB
+```
+```c++
+class Solution {
+public:
+    int passThePillow(int n, int time) {
+        // Calculate the number of complete rounds of pillow passing
+        int fullRounds = time / (n - 1);
+
+        // Calculate the remaining time after complete rounds
+        int extraTime = time % (n - 1);
+
+        // Determine the position of the person holding the pillow
+        // If fullRounds is even, the pillow is moving forward.
+        // If fullRounds is odd, the pillow is moving backward.
+        if (fullRounds % 2 == 0) {
+            return extraTime + 1;  // Position when moving forward
+        } else {
+            return n - extraTime;  // Position when moving backward
+        }
+    }
+};
+```
