update LeetCode solution - algorithm

--- a/algorithm/LeetCode/[Easy] 1598. Crawler Log Folder.md
+++ b/algorithm/LeetCode/[Easy] 1598. Crawler Log Folder.md
@@ -67,3 +67,25 @@ class Solution:
                 ans += 1
         return ans
 ```
+
+**Solution 2: (Greedy)**
+```
+Runtime: 9 ms
+Memory: 13.84 MB
+```
+```c++
+class Solution {
+public:
+    int minOperations(vector<string>& logs) {
+        int ans = 0;
+        for (auto log: logs) {
+            if (log == "../") {
+                ans = max(ans - 1, 0);
+            } else if (log != "./") {
+                ans += 1;
+            }
+        }
+        return ans;
+    }
+};
+```
