update LeetCode Weekly Contest 406

--- a/algorithm/LeetCode/[Easy] 1089. Duplicate Zeros.md
+++ b/algorithm/LeetCode/[Easy] 1089. Duplicate Zeros.md
@@ -47,3 +47,32 @@ class Solution:
                 i += 1
             i += 1
 ```
+
+**Solution 2: (Brute Force)**
+```
+Runtime: 0 ms
+Memory: 12.23 MB
+```
+```c++
+class Solution {
+public:
+    void duplicateZeros(vector<int>& arr) {
+        vector<int> dp = arr;
+        int i = 0, j = 0;
+        while (j < arr.size()) {
+            if (dp[i] != 0) {
+                arr[j] = dp[i];
+                j += 1;
+            } else {
+                arr[j] = 0;
+                j += 1;
+                if (j < arr.size()) {
+                    arr[j] = 0;
+                    j += 1;
+                }
+            }
+            i += 1;
+        }
+    }
+};
+```
