--- a/algorithm/LeetCode/[Hard] 2751. Robot Collisions.md
+++ b/algorithm/LeetCode/[Hard] 2751. Robot Collisions.md
@@ -55,44 +55,105 @@ Explanation: Robot 1 and robot 2 will collide and since both have the same healt
 ---
 **Solution 1: (Stack)**
 ```
-Runtime: 471 ms
-Memory: 189.2 MB
+Runtime: 202 ms
+Memory: 195.18 MB
 ```
 ```c++
 class Solution {
 public:
     vector<int> survivedRobotsHealths(vector<int>& positions, vector<int>& healths, string directions) {
         int n = positions.size();
-        vector<int> ind(n), stack, res;
-        for (int i = 0; i < n; i++)
-            ind[i] = i;
-        sort(ind.begin(), ind.end(), [&](int a, int b) {
-            return positions[a] < positions[b];
-        });
-        for (int i : ind) {
-            if (directions[i] == 'R') {
-                stack.push_back(i);
-                continue;
-            }
-            while (!stack.empty() && healths[i] > 0) {
-                if (healths[stack.back()] < healths[i]) {
-                    healths[stack.back()] = 0, stack.pop_back();
-                    healths[i] -= 1;
-                } else if (healths[stack.back()] > healths[i]) {
-                    healths[stack.back()] -= 1;
-                    healths[i] = 0;
-                } else {
-                    healths[stack.back()] = 0, stack.pop_back();
-                    healths[i] = 0;
+        vector<int> indices(n), result;
+        stack<int> stack;
+
+        for (int index = 0; index < n; ++index) {
+            indices[index] = index;
+        }
+
+        sort(indices.begin(), indices.end(),
+             [&](int lhs, int rhs) { return positions[lhs] < positions[rhs]; });
+
+        for (int currentIndex : indices) {
+            // Add right-moving robots to the stack
+            if (directions[currentIndex] == 'R') {
+                stack.push(currentIndex);
+            } else {
+                while (!stack.empty() && healths[currentIndex] > 0) {
+                    // Pop the top robot from the stack for collision check
+                    int topIndex = stack.top();
+                    stack.pop();
+
+                    // Top robot survives, current robot is destroyed
+                    if (healths[topIndex] > healths[currentIndex]) {
+                        healths[topIndex] -= 1;
+                        healths[currentIndex] = 0;
+                        stack.push(topIndex);
+                    } else if (healths[topIndex] < healths[currentIndex]) {
+                        // Current robot survives, top robot is destroyed
+                        healths[currentIndex] -= 1;
+                        healths[topIndex] = 0;
+                    } else {
+                        // Both robots are destroyed
+                        healths[currentIndex] = 0;
+                        healths[topIndex] = 0;
+                    }
                 }
             }
         }
-        for (int v : healths) {
-            if (v > 0) {
-                res.push_back(v);
+
+        // Collect surviving robots
+        for (int index = 0; index < n; ++index) {
+            if (healths[index] > 0) {
+                result.push_back(healths[index]);
             }
         }
-        return res;
+        return result;
+    }
+};
+```
+
+**Solution 2: (Stack)**
+```
+Runtime: 207 ms
+Memory: 199.43 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> survivedRobotsHealths(vector<int>& positions, vector<int>& healths, string directions) {
+        int n = positions.size();
+        vector<int> dp;
+        for (int i = 0; i < n; i ++) {
+            dp.push_back(i);
+        }
+        sort(dp.begin(), dp.end(), [&](int i, int j){return positions[i] < positions[j];});
+        vector<int> stk;
+        for (int i = 0; i < n; i ++) {
+            while (directions[dp[i]] == 'L' && healths[dp[i]] && stk.size() && directions[stk.back()] == 'R') {
+                if (healths[stk.back()] == healths[dp[i]]) {
+                    healths[stk.back()] = 0;
+                    stk.pop_back();
+                    healths[dp[i]] = 0;
+                } else if (healths[stk.back()] < healths[dp[i]]) {
+                    healths[stk.back()] = 0;
+                    stk.pop_back();
+                    healths[dp[i]] -= 1;
+                } else {
+                    healths[stk.back()] -= 1;
+                    healths[dp[i]] = 0;
+                }
+            }
+            if (healths[dp[i]]) {
+                stk.push_back(dp[i]);
+            }
+        }
+        vector<int> ans;
+        for (int i = 0; i < n; i ++) {
+            if (healths[i]) {
+                ans.push_back(healths[i]);
+            }
+        }
+        return ans;
     }
 };
 ```
