update LeetCode Biweekly Contest 135

--- a/algorithm/LeetCode/[Easy] 1380. Lucky Numbers in a Matrix.md
+++ b/algorithm/LeetCode/[Easy] 1380. Lucky Numbers in a Matrix.md
@@ -46,3 +46,99 @@ class Solution:
     def luckyNumbers (self, matrix: List[List[int]]) -> List[int]:
         return list({min(row) for row in matrix} & {max(col) for col in zip(*matrix)})
 ```
+
+**Solution 2: (Simulation)**
+```
+Runtime: 17 ms
+Memory: 14.32 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> luckyNumbers (vector<vector<int>>& matrix) {
+        int N = matrix.size(), M = matrix[0].size();
+
+        vector<int> rowMin;
+        for (int i = 0; i < N; i++) {
+
+            int rMin = INT_MAX;
+            for (int j = 0; j < M; j++) {
+                rMin = min(rMin, matrix[i][j]);
+            }
+            rowMin.push_back(rMin);
+        }
+
+        vector<int> colMax;
+        for (int i = 0; i < M; i++) {
+
+            int cMax = INT_MIN;
+            for (int j = 0; j < N; j++) {
+                cMax = max(cMax, matrix[j][i]);
+            }
+            colMax.push_back(cMax);
+        }
+
+        vector<int> luckyNumbers;
+        for (int i = 0; i < N; i++) {
+            for (int j = 0; j < M; j++) {
+                if (matrix[i][j] == rowMin[i] && matrix[i][j] == colMax[j]) {
+                    luckyNumbers.push_back(matrix[i][j]);
+                }
+            }
+        }
+
+        return luckyNumbers;
+    }
+};
+```
+
+**Solution 3: (Greedy, at most one lucky number)**
+
+   (b)   x  |  r1
+    y   (a) |  r2
+  ---------  
+   c2   c1
+
+1. y < a, x > a
+ -> y < x
+2. y > b, x < b
+ -> y > x
+=> not possible
+```
+Runtime: 17 ms
+Memory: 14.31 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> luckyNumbers (vector<vector<int>>& matrix) {
+        int N = matrix.size(), M = matrix[0].size();
+        
+        int rMinMax = INT_MIN;
+        for (int i = 0; i < N; i++) {
+
+            int rMin = INT_MAX;
+            for (int j = 0; j < M; j++) {
+                rMin = min(rMin, matrix[i][j]);
+            }
+            rMinMax = max(rMinMax, rMin);
+        }
+        
+        int cMaxMin = INT_MAX;
+        for (int i = 0; i < M; i++) {
+
+            int cMax = INT_MIN;
+            for (int j = 0; j < N; j++) {
+                cMax = max(cMax, matrix[j][i]);
+            }
+            cMaxMin = min(cMaxMin, cMax);
+        }
+        
+        if (rMinMax == cMaxMin) {
+            return {rMinMax};
+        }
+        
+        return {};
+    }
+};
+```
