--- a/algorithm/LeetCode/[Hard] 2392. Build a Matrix With Conditions.md
+++ b/algorithm/LeetCode/[Hard] 2392. Build a Matrix With Conditions.md
@@ -152,3 +152,132 @@ public:
     }
 };
 ```
+
+**Solution 2: (Depth-First Search)**
+```
+Runtime: 83 ms
+Memory: 60.37 MB
+```
+```c++
+class Solution {
+    vector<int> topoSort(vector<vector<int>>& edges, int n) {
+        vector<vector<int>> adj(n + 1);
+        vector<int> order;
+        // 0: not visited, 1: visiting, 2: visited
+        vector<int> visited(n + 1, 0);
+        bool hasCycle = false;
+
+        // Build adjacency list
+        for (auto& x : edges) {
+            adj[x[0]].push_back(x[1]);
+        }
+
+        // Perform DFS for each node
+        for (int i = 1; i <= n; i++) {
+            if (visited[i] == 0) {
+                dfs(i, adj, visited, order, hasCycle);
+                // Return empty if cycle detected
+                if (hasCycle) return {};
+            }
+        }
+        // Reverse to get the correct order
+        reverse(order.begin(), order.end());
+        return order;
+    }
+
+    void dfs(int node, vector<vector<int>>& adj, vector<int>& visited,
+             vector<int>& order, bool& hasCycle) {
+        visited[node] = 1;  // Mark node as visiting
+        for (int neighbor : adj[node]) {
+            if (visited[neighbor] == 0) {
+                dfs(neighbor, adj, visited, order, hasCycle);
+                // Early exit if a cycle is detected
+                if (hasCycle) return;
+            } else if (visited[neighbor] == 1) {
+                // Cycle detected
+                hasCycle = true;
+                return;
+            }
+        }
+        // Mark node as visited
+        visited[node] = 2;
+        // Add node to the order
+        order.push_back(node);
+    }
+public:
+    vector<vector<int>> buildMatrix(int k, vector<vector<int>>& rowConditions, vector<vector<int>>& colConditions) {
+        // Store the topologically sorted sequences.
+        vector<int> orderRows = topoSort(rowConditions, k);
+        vector<int> orderColumns = topoSort(colConditions, k);
+
+        // If no topological sort exists, return empty array.
+        if (orderRows.empty() or orderColumns.empty()) return {};
+
+        vector<vector<int>> matrix(k, vector<int>(k, 0));
+        for (int i = 0; i < k; i++) {
+            for (int j = 0; j < k; j++) {
+                if (orderRows[i] == orderColumns[j]) {
+                    matrix[i][j] = orderRows[i];
+                }
+            }
+        }
+        return matrix;
+    }
+};
+```
+
+**Solution 3: (Kahn's Algorithm)**
+```
+Runtime: 109 ms
+Memory: 65.13 MB
+```
+```c++
+class Solution {
+    // Code to find the topologically sorted sequence using Kahn's algorithm.
+    vector<int> topoSort(vector<vector<int>>& edges, int n) {
+        // Create an adjacency list to store the edges.
+        vector<vector<int>> adj(n + 1);
+        vector<int> deg(n + 1), order;
+        for (auto x : edges) {
+            adj[x[0]].push_back(x[1]);
+            deg[x[1]]++;
+        }
+        queue<int> q;
+        // Push all integers with in-degree 0 in the queue.
+        for (int i = 1; i <= n; i++) {
+            if (deg[i] == 0) q.push(i);
+        }
+        while (!q.empty()) {
+            int f = q.front();
+            q.pop();
+            order.push_back(f);
+            n--;
+            for (auto v : adj[f]) {
+                if (--deg[v] == 0) q.push(v);
+            }
+        }
+        // If we have not visited all integers, return empty array.
+        if (n != 0) return {};
+        return order;
+    }
+public:
+    vector<vector<int>> buildMatrix(int k, vector<vector<int>>& rowConditions, vector<vector<int>>& colConditions) {
+        // Store the topologically sorted sequences.
+        vector<int> orderRows = topoSort(rowConditions, k);
+        vector<int> orderColumns = topoSort(colConditions, k);
+
+        // If no topological sort exists, return empty array.
+        if (orderRows.empty() or orderColumns.empty()) return {};
+
+        vector<vector<int>> matrix(k, vector<int>(k, 0));
+        for (int i = 0; i < k; i++) {
+            for (int j = 0; j < k; j++) {
+                if (orderRows[i] == orderColumns[j]) {
+                    matrix[i][j] = orderRows[i];
+                }
+            }
+        }
+        return matrix;
+    }
+};
+```
