update LeetCode Weekly Contest 408

--- a/algorithm/LeetCode/[Easy] 1636. Sort Array by Increasing Frequency.md
+++ b/algorithm/LeetCode/[Easy] 1636. Sort Array by Increasing Frequency.md
@@ -44,3 +44,28 @@ class Solution:
         count = collections.Counter(nums)
         return sorted(nums, key=lambda x: (count[x], -x))
 ```
+
+**Solution 2: (Counter, sort)**
+```
+Runtime: 4 ms
+Memory: 14.74 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> frequencySort(vector<int>& nums) {
+        int cnt[201] = {0};
+        for (auto num: nums) {
+            cnt[num+100] += 1;
+        }
+        sort(nums.begin(), nums.end(), [&](auto a, auto b){
+            if (cnt[a+100] != cnt[b+100]) {
+                return cnt[a+100] < cnt[b+100];
+            } else {
+                return a > b;
+            }
+        });
+        return nums;
+    }
+};
+```
