--- a/algorithm/LeetCode/[Easy] 2418. Sort the People.md
+++ b/algorithm/LeetCode/[Easy] 2418. Sort the People.md
@@ -66,3 +66,243 @@ public:
     }
 };
 ```
+
+**Solution 3: (Map)**
+```
+Runtime: 33 ms
+Memory: 25.54 MB
+```
+```c++
+class Solution {
+public:
+    vector<string> sortPeople(vector<string>& names, vector<int>& heights) {
+        int number_of_people = names.size();
+
+        // Create a map to store height-name pairs
+        unordered_map<int, string> height_to_name_map;
+
+        // Populate the map with height as key and name as value
+        for (int i = 0; i < number_of_people; i++) {
+            height_to_name_map[heights[i]] = names[i];
+        }
+
+        sort(heights.begin(), heights.end());
+
+        vector<string> sorted_names(number_of_people);
+
+        // Populate sorted_names vector in descending order of height
+        for (int i = number_of_people - 1; i >= 0; i--) {
+            sorted_names[number_of_people - i - 1] =
+                height_to_name_map[heights[i]];
+        }
+
+        return sorted_names;
+    }
+};
+```
+
+**Solution 4: (Sorted Map)**
+```
+Runtime: 30 ms
+Memory: 26.01 MB
+```
+```c++
+class Solution {
+public:
+    vector<string> sortPeople(vector<string>& names, vector<int>& heights) {
+        int numberOfPeople = names.size();
+
+        // Create a map to store height-name pairs (automatically sorted by
+        // height)
+        map<int, string> heightToNameMap;
+
+        // Populate the map with height as key and name as value
+        for (int i = 0; i < numberOfPeople; i++) {
+            heightToNameMap[heights[i]] = names[i];
+        }
+
+        vector<string> sortedNames(numberOfPeople);
+
+        // Index for filling sortedNames vector from end to start
+        int currentIndex = numberOfPeople - 1;
+
+        // Iterate through the map (sorted by height in ascending order)
+        // and fill the sortedNames vector from end to start
+        for (const auto& pair : heightToNameMap) {
+            sortedNames[currentIndex] = pair.second;
+            currentIndex--;
+        }
+
+        return sortedNames;
+    }
+};
+```
+
+**Solution 5: (Sort Permutation)**
+```
+Runtime: 21 ms
+Memory: 22.41 MB
+```
+```c++
+class Solution {
+public:
+    vector<string> sortPeople(vector<string>& names, vector<int>& heights) {
+        int numberOfPeople = names.size();
+
+        // Create a permutation vector to store sorted indices
+        vector<int> sortedIndices(numberOfPeople);
+        iota(begin(sortedIndices), end(sortedIndices), 0);
+
+        // Sort indices based on heights in descending order
+        sort(begin(sortedIndices), end(sortedIndices),
+             [&heights](int a, int b) { return heights[a] > heights[b]; });
+
+        // Prepare the result vector to store sorted names
+        vector<string> sortedNames;
+        sortedNames.reserve(numberOfPeople);
+
+        // Apply the sorted indices to rearrange names using a traditional for
+        // loop
+        for (int i = 0; i < numberOfPeople; i++) {
+            sortedNames.push_back(move(names[sortedIndices[i]]));
+        }
+
+        return sortedNames;
+    }
+};
+```
+
+**Solution 6: (Quick Sort)**
+```
+Runtime: 38 ms
+Memory: 26.12 MB
+```
+```c++
+class Solution {
+    void swap(vector<int>& heights, vector<string>& names, int index1,
+              int index2) {
+        // Swap heights
+        int tempHeight = heights[index1];
+        heights[index1] = heights[index2];
+        heights[index2] = tempHeight;
+
+        // Swap corresponding names
+        string tempName = names[index1];
+        names[index1] = names[index2];
+        names[index2] = tempName;
+    }
+
+    int partition(vector<int>& heights, vector<string>& names, int start,
+                  int end) {
+        int pivot = heights[end];
+        int i = start - 1;
+
+        for (int j = start; j < end; j++) {
+            // If current element is greater than or equal to pivot
+            if (heights[j] >= pivot) {
+                i++;
+                swap(heights, names, i, j);
+            }
+        }
+        // Place the pivot in its correct position
+        swap(heights, names, i + 1, end);
+        return i + 1;
+    }
+
+    void quickSort(vector<int>& heights, vector<string>& names, int start,
+                   int end) {
+        if (start < end) {
+            // Find the partition index
+            int partitionIndex = partition(heights, names, start, end);
+
+            // Recursively sort the left and right sub-arrays
+            quickSort(heights, names, start, partitionIndex - 1);
+            quickSort(heights, names, partitionIndex + 1, end);
+        }
+    }
+public:
+    vector<string> sortPeople(vector<string>& names, vector<int>& heights) {
+        quickSort(heights, names, 0, heights.size() - 1);
+        return names;
+    }
+};
+```
+
+**Solution 7: (Merge Sort)**
+```
+Runtime: 77 ms
+Memory: 47.21 MB
+```
+```c++
+class Solution {
+    void mergeSort(vector<string>& names, vector<int>& heights, int start,
+                   int end) {
+        if (start < end) {
+            int mid = start + (end - start) / 2;
+            mergeSort(names, heights, start, mid);
+            mergeSort(names, heights, mid + 1, end);
+            merge(names, heights, start, mid, end);
+        }
+    }
+
+    void merge(vector<string>& names, vector<int>& heights, int start, int mid,
+               int end) {
+        int leftSize = mid - start + 1;
+        int rightSize = end - mid;
+
+        // Create temporary vectors
+        vector<int> leftHeights(leftSize);
+        vector<int> rightHeights(rightSize);
+        vector<string> leftNames(leftSize);
+        vector<string> rightNames(rightSize);
+
+        // Copy data to temporary vectors
+        for (int i = 0; i < leftSize; i++) {
+            leftHeights[i] = heights[start + i];
+            leftNames[i] = names[start + i];
+        }
+        for (int j = 0; j < rightSize; j++) {
+            rightHeights[j] = heights[mid + 1 + j];
+            rightNames[j] = names[mid + 1 + j];
+        }
+
+        // Merge the temporary vectors
+        int leftIndex = 0, rightIndex = 0;
+        int mergeIndex = start;
+        while (leftIndex < leftSize && rightIndex < rightSize) {
+            if (leftHeights[leftIndex] >=
+                rightHeights[rightIndex]) {  // Descending order
+                heights[mergeIndex] = leftHeights[leftIndex];
+                names[mergeIndex] = leftNames[leftIndex];
+                leftIndex++;
+            } else {
+                heights[mergeIndex] = rightHeights[rightIndex];
+                names[mergeIndex] = rightNames[rightIndex];
+                rightIndex++;
+            }
+            mergeIndex++;
+        }
+
+        // Copy remaining elements of leftHeights, if any
+        while (leftIndex < leftSize) {
+            heights[mergeIndex] = leftHeights[leftIndex];
+            names[mergeIndex] = leftNames[leftIndex];
+            leftIndex++;
+            mergeIndex++;
+        }
+
+        // Copy remaining elements of rightHeights, if any
+        while (rightIndex < rightSize) {
+            heights[mergeIndex] = rightHeights[rightIndex];
+            names[mergeIndex] = rightNames[rightIndex];
+            rightIndex++;
+            mergeIndex++;
+        }
+    }
+public:
+    vector<string> sortPeople(vector<string>& names, vector<int>& heights) {
+        mergeSort(names, heights, 0, heights.size() - 1);
+        return names;
+    }
+};
+```
