update LeetCode Biweekly Contest 136

--- a/algorithm/LeetCode/[Easy] 2678. Number of Senior Citizens.md
+++ b/algorithm/LeetCode/[Easy] 2678. Number of Senior Citizens.md
@@ -62,3 +62,62 @@ public:
     }
 };
 ```
+
+**Solution 3: (String Parsing)**
+```
+Runtime: 6 ms
+Memory: 17.74 MB
+```
+```c++
+class Solution {
+public:
+    int countSeniors(vector<string>& details) {
+        int seniorCount = 0;
+
+        // Iterate through each passenger's details
+        for (string& passengerInfo : details) {
+            // Extract the age from the passengerInfo string
+            // Age is located at index 11 and 12 (2 characters)
+            int age = stoi(passengerInfo.substr(11, 2));
+
+            // Check if the passenger is a senior (strictly over 60 years old)
+            if (age > 60) {
+                seniorCount++;
+            }
+        }
+
+        return seniorCount;
+    }
+};
+```
+
+**Solution 4: (Character-Based Extraction)**
+```
+Runtime: 3 ms
+Memory: 17.46 MB
+```
+```c++
+class Solution {
+public:
+    int countSeniors(vector<string>& details) {
+        int seniorCount = 0;
+
+        // Iterate through each passenger's details
+        for (string& passengerInfo : details) {
+            // Extract the digits of age
+            int ageTens = passengerInfo[11] - '0';
+            int ageOnes = passengerInfo[12] - '0';
+
+            // Calculate the full age
+            int age = ageTens * 10 + ageOnes;
+
+            // Check if the passenger is a senior (strictly over 60 years old)
+            if (age > 60) {
+                seniorCount++;
+            }
+        }
+
+        return seniorCount;
+    }
+};
+```
