--- a/algorithm/LeetCode/[Easy] 1460. Make Two Arrays Equal by Reversing Sub-arrays.md
+++ b/algorithm/LeetCode/[Easy] 1460. Make Two Arrays Equal by Reversing Sub-arrays.md
@@ -64,3 +64,27 @@ class Solution:
     def canBeEqual(self, target: List[int], arr: List[int]) -> bool:
         return collections.Counter(target) == collections.Counter(arr)
 ```
+
+**Solution 1: (Counting sort)**
+```
+Runtime: 12 ms
+Memory: 18.10 MB
+```
+```c++
+class Solution {
+public:
+    bool canBeEqual(vector<int>& target, vector<int>& arr) {
+        int dp[1001] = {0};
+        for (int i = 0; i < target.size(); i ++) {
+            dp[arr[i]] += 1;
+            dp[target[i]] -= 1;
+        }
+        for (int i = 1; i <= 1000; i ++) {
+            if (dp[i] != 0) {
+                return false;
+            }
+        }
+        return true;
+    }
+};
+```
