update LeetCode Biweekly Contest 138

--- a/algorithm/LeetCode/[Easy] 2022. Convert 1D Array Into 2D Array.md
+++ b/algorithm/LeetCode/[Easy] 2022. Convert 1D Array Into 2D Array.md
@@ -72,20 +72,19 @@ class Solution:
 
 **Solution 2: (Array)**
 ```
-Runtime: 112 ms
-Memory Usage: 85.3 MB
+Runtime: 72 ms
+Memory: 87.83 MB
 ```
 ```c++
 class Solution {
 public:
     vector<vector<int>> construct2DArray(vector<int>& original, int m, int n) {
-        if (original.size() != m * n) return {};
+        if (original.size() != m*n) {
+            return {};
+        }
         vector<vector<int>> ans(m, vector<int>(n));
-        int k = 0;
-        for (int i = 0; i < m; ++i) {
-            for (int j = 0; j < n; ++j) {
-                ans[i][j] = original[k++];
-            }
+        for (int i = 0; i < original.size(); i ++) {
+            ans[i/n][i%n] = original[i];
         }
         return ans;
     }
