--- a/algorithm/LeetCode/[Hard] 2699. Modify Graph Edge Weights.md
+++ b/algorithm/LeetCode/[Hard] 2699. Modify Graph Edge Weights.md
@@ -226,3 +226,277 @@ public:
     }
 };
 ```
+
+**Solution 3: (Dijkstra's algo - twice, O(E * (V + E)LogV))**
+```
+Runtime: 569 ms
+Memory: 222.96 MB
+```
+```c++
+class Solution {
+public:
+    vector<vector<int>> modifiedGraphEdges(int n, vector<vector<int>>& edges, int source, int destination, int target) {
+        vector<vector<pair<int, int>>> g(n);
+        for (int i = 0; i < edges.size(); i ++) {
+            if (edges[i][2] != -1) {
+                g[edges[i][0]].push_back({edges[i][1], edges[i][2]});
+                g[edges[i][1]].push_back({edges[i][0], edges[i][2]});
+            }
+        }
+        priority_queue<pair<int,int>, vector<pair<int,int>>, greater<pair<int,int>>> pq;
+        pq.push({0, source});
+        vector<int> dist(n, 1e9);
+        dist[source] = 0;
+        while (pq.size()) {
+            auto [w, v] = pq.top();
+            pq.pop();
+            if (w > dist[v]) {
+                continue;
+            }
+            dist[v] = w;
+            for (auto [nv, dw]: g[v]) {
+                if (w + dw < dist[nv]) {
+                    dist[nv] = w + dw;
+                    pq.push({w + dw, nv});
+                }
+            }
+        }
+        if (dist[destination] < target) {
+            return {};
+        }
+        if (dist[destination] == target) {
+            for (int i = 0; i < edges.size(); i ++) {
+                if (edges[i][2] == -1) {
+                    edges[i][2] = 1e9;
+                }
+            }
+            return edges;
+        }
+        for (int i = 0; i < edges.size(); i ++) {
+            if (edges[i][2] == -1) {
+                edges[i][2] = 1;
+                g[edges[i][0]].push_back({edges[i][1], edges[i][2]});
+                g[edges[i][1]].push_back({edges[i][0], edges[i][2]});
+                while (pq.size()) {
+                    pq.pop();
+                }
+                pq.push({0, source});
+                fill(dist.begin(), dist.end(), 1e9);
+                dist[source] = 0;
+                while (pq.size()) {
+                    auto [w, v] = pq.top();
+                    pq.pop();
+                    if (w > dist[v]) {
+                        continue;
+                    }
+                    if (v == destination) {
+                        break;
+                    }
+                    dist[v] = w;
+                    for (auto [nv, dw]: g[v]) {
+                        if (w + dw < dist[nv]) {
+                            dist[nv] = w + dw;
+                            pq.push({w + dw, nv});
+                        }
+                    }
+                }
+                if (dist[destination] <= target) {
+                    edges[i][2] += target - dist[destination];
+                    for (int j = 0; j < edges.size(); j ++) {
+                        if (edges[j][2] == -1) {
+                            edges[j][2] = 1e9;
+                        }
+                    }
+                    return edges;
+                }
+            }
+        }
+        return {};
+    }
+};
+```
+
+**Solution 4: (Traditional Dijkstra's algorithm, O(E * V^2))**
+```
+Runtime: 1321 ms
+Memory: 586.28 MB
+```
+```c++
+class Solution {
+    const int INF = 2e9;
+    // Dijkstra's algorithm to find the shortest path distance
+    long long runDijkstra(const vector<vector<int>>& edges, int nodeCount,
+                          int sourceNode, int destinationNode) {
+        // Step 1: Initialize adjacency matrix and distance arrays
+        vector<vector<long long>> adjMatrix(nodeCount,
+                                            vector<long long>(nodeCount, INF));
+        vector<long long> minDistance(nodeCount, INF);
+        vector<bool> visited(nodeCount, false);
+
+        // Set the distance to the source node as 0
+        minDistance[sourceNode] = 0;
+
+        // Step 2: Fill the adjacency matrix with edge weights
+        for (const vector<int>& edge : edges) {
+            if (edge[2] != -1) {
+                adjMatrix[edge[0]][edge[1]] = edge[2];
+                adjMatrix[edge[1]][edge[0]] = edge[2];
+            }
+        }
+
+        // Step 3: Perform Dijkstra's algorithm
+        for (int i = 0; i < nodeCount; ++i) {
+            // Find the nearest unvisited node
+            int nearestUnvisitedNode = -1;
+            for (int j = 0; j < nodeCount; ++j) {
+                if (!visited[j] &&
+                    (nearestUnvisitedNode == -1 ||
+                     minDistance[j] < minDistance[nearestUnvisitedNode])) {
+                    nearestUnvisitedNode = j;
+                }
+            }
+            // Mark the nearest node as visited
+            visited[nearestUnvisitedNode] = true;
+
+            // Update the minimum distance for each adjacent node
+            for (int v = 0; v < nodeCount; ++v) {
+                minDistance[v] =
+                    min(minDistance[v], minDistance[nearestUnvisitedNode] +
+                                            adjMatrix[nearestUnvisitedNode][v]);
+            }
+        }
+
+        // Return the shortest distance to the destination node
+        return minDistance[destinationNode];
+    }
+public:
+    vector<vector<int>> modifiedGraphEdges(int n, vector<vector<int>>& edges, int source, int destination, int target) {
+        // Step 1: Compute the initial shortest distance from source to
+        // destination
+        long long currentShortestDistance =
+            runDijkstra(edges, n, source, destination);
+
+        // If the current shortest distance is less than the target, return an
+        // empty result
+        if (currentShortestDistance < target) return {};
+
+        bool matchesTarget = (currentShortestDistance == target);
+
+        // Step 2: Iterate through each edge to adjust its weight if necessary
+        for (vector<int>& edge : edges) {
+            // Skip edges that already have a positive weight
+            if (edge[2] > 0) continue;
+
+            // Set edge weight to a large value if current distance matches
+            // target else set to 1
+            edge[2] = matchesTarget ? INF : 1;
+
+            // Step 3: If current shortest distance does not match target
+            if (!matchesTarget) {
+                // Compute the new shortest distance with the updated edge
+                // weight
+                long long newDistance =
+                    runDijkstra(edges, n, source, destination);
+                // If the new distance is within the target range, update edge
+                // weight to match target
+                if (newDistance <= target) {
+                    matchesTarget = true;
+                    edge[2] += target - newDistance;
+                }
+            }
+        }
+
+        // Return modified edges if the target distance is achieved, otherwise
+        // return an empty result
+        return matchesTarget ? edges : vector<vector<int>>{};
+    }
+};
+```
+
+**Soilution 5: (Dijkstra's Algorithm with Min-Heap, O(E * (V + E)LogV))**
+```
+Runtime: 570 ms
+Memory: 244.26 MB
+```
+```c++
+class Solution {
+    const int INF = 2e9;
+    int runDijkstra(int n, int source, int destination,
+                    const vector<vector<pair<int, int>>>& graph) {
+        vector<int> minDistance(n, INF);
+        vector<bool> visited(n, false);
+        priority_queue<pair<int, int>, vector<pair<int, int>>, greater<>>
+            minHeap;
+
+        minDistance[source] = 0;
+        minHeap.emplace(0, source);
+
+        while (!minHeap.empty()) {
+            auto [d, u] = minHeap.top();
+            minHeap.pop();
+
+            if (d > minDistance[u]) continue;
+
+            for (const auto& [v, weight] : graph[u]) {
+                if (d + weight < minDistance[v]) {
+                    minDistance[v] = d + weight;
+                    minHeap.emplace(minDistance[v], v);
+                }
+            }
+        }
+
+        return minDistance[destination];
+    }
+public:
+    vector<vector<int>> modifiedGraphEdges(int n, vector<vector<int>>& edges, int source, int destination, int target) {
+        vector<vector<pair<int, int>>> graph(n);
+
+        // Step 1: Build the graph, excluding edges with -1 weights
+        for (const auto& edge : edges) {
+            if (edge[2] != -1) {
+                graph[edge[0]].emplace_back(edge[1], edge[2]);
+                graph[edge[1]].emplace_back(edge[0], edge[2]);
+            }
+        }
+
+        // Step 2: Compute the initial shortest distance from source to
+        // destination
+        int currentShortestDistance =
+            runDijkstra(n, source, destination, graph);
+        if (currentShortestDistance < target) {
+            return vector<vector<int>>();
+        }
+
+        bool matchesTarget = (currentShortestDistance == target);
+
+        // Step 3: Iterate through each edge to adjust its weight if necessary
+        for (auto& edge : edges) {
+            if (edge[2] != -1)
+                continue;  // Skip edges with already known weights
+
+            // Set edge weight to a large value if current distance matches
+            // target, else set to 1
+            edge[2] = matchesTarget ? INF : 1;
+            graph[edge[0]].emplace_back(edge[1], edge[2]);
+            graph[edge[1]].emplace_back(edge[0], edge[2]);
+
+            // Step 4: If current shortest distance does not match target
+            if (!matchesTarget) {
+                // Compute the new shortest distance with the updated edge
+                // weight
+                int newDistance = runDijkstra(n, source, destination, graph);
+                // If the new distance is within the target range, update edge
+                // weight to match target
+                if (newDistance <= target) {
+                    matchesTarget = true;
+                    edge[2] += target - newDistance;
+                }
+            }
+        }
+
+        // Return modified edges if the target distance is achieved, otherwise
+        // return an empty result
+        return matchesTarget ? edges : vector<vector<int>>();
+    }
+};
+```
