update LeetCode Weekly Contest 414

--- a/algorithm/LeetCode/[Easy] 1351. Count Negative Numbers in a Sorted Matrix.md
+++ b/algorithm/LeetCode/[Easy] 1351. Count Negative Numbers in a Sorted Matrix.md
@@ -88,3 +88,29 @@ public:
     }
 };
 ```
+
+**Solution 3: (Greedy)**
+```
+Runtime: 4 ms
+Memory: 12.89 MB
+```
+```c++
+class Solution {
+public:
+    int countNegatives(vector<vector<int>>& grid) {
+        int m = grid.size(), n = grid[0].size();
+        int i = 0, j = n-1, ans = 0;
+        while (i < m) {
+            while (j >= 0 && grid[i][j] < 0) {
+                j -= 1;
+            }
+            if (j < 0) {
+                break;
+            }
+            ans += n-1-j;
+            i += 1;
+        }
+        return ans + (m-i)*n;
+    }
+};
+```
