--- a/algorithm/LeetCode/[Easy] 1200. Minimum Absolute Difference.md
+++ b/algorithm/LeetCode/[Easy] 1200. Minimum Absolute Difference.md
@@ -107,3 +107,27 @@ int** minimumAbsDifference(int* arr, int arrSize, int* returnSize, int** returnC
     return ans;
 }
 ```
+
+**Solution 3: (Greedy)**
+```
+Runtime: 45 ms
+Memory: 36.04 MB
+```
+```c++
+class Solution {
+public:
+    vector<vector<int>> minimumAbsDifference(vector<int>& arr) {
+        sort(arr.begin(), arr.end());
+        vector<vector<int>> ans;
+        for (int i = 0; i < arr.size()-1; i ++) {
+            if (ans.size() == 0 || arr[i+1]-arr[i] < ans.back()[1]-ans.back()[0]) {
+                ans.clear();
+                ans.push_back({arr[i], arr[i+1]});
+            } else if (arr[i+1] - arr[i] == ans.back()[1] - ans.back()[0]) {
+                ans.push_back({arr[i], arr[i+1]});
+            }
+        }
+        return ans;
+    }
+};
+```
