--- a/algorithm/LeetCode/[Easy] 1945. Sum of Digits of String After Convert.md
+++ b/algorithm/LeetCode/[Easy] 1945. Sum of Digits of String After Convert.md
@@ -62,3 +62,67 @@ class Solution:
             s = str(sum(int(x) for x in s))
         return s
 ```
+
+**Solution 2: (String Concatenation to Summation)**
+```
+Runtime: 5 ms
+Memory: 10.17 MB
+```
+```c++
+class Solution {
+public:
+    int getLucky(string s, int k) {
+        // Convert each character to its numerical value and build a string
+        string numericString = "";
+        for (char ch : s) {
+            numericString += to_string(ch - 'a' + 1);
+        }
+
+        // Apply digit sum transformations k times
+        while (k-- > 0) {
+            int digitSum = 0;
+            for (char digit : numericString) {
+                digitSum += digit - '0';
+            }
+            numericString = to_string(digitSum);
+        }
+
+        // Convert the final string to integer and return
+        return stoi(numericString);
+    }
+};
+```
+
+**Solution 3: (Direct Integer Operation)**
+```
+Runtime: 0 ms
+Memory: 7.98 MB
+```
+```c++
+class Solution {
+public:
+    int getLucky(string s, int k) {
+        // Convert the string to a number by summing digit values
+        int currentNumber = 0;
+        for (char ch : s) {
+            int position = ch - 'a' + 1;
+            while (position > 0) {
+                currentNumber += position % 10;
+                position /= 10;
+            }
+        }
+
+        // Apply digit sum transformations k-1 times
+        for (int i = 1; i < k; ++i) {
+            int digitSum = 0;
+            while (currentNumber > 0) {
+                digitSum += currentNumber % 10;
+                currentNumber /= 10;
+            }
+            currentNumber = digitSum;
+        }
+
+        return currentNumber;
+    }
+};
+```
